# mdrn-protocol

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  test-key.json
.claude/cache/agents/kraken/: output-20260322-161116.md  output-20260322-174500.md  output-20260322-keygen.md  output-20260322-listen.md  output-discover-2026-03-22.md
.claude/cache/agents/spark/: output-20260322-143028.md
contracts/: README.md
docs/: MDRN-STUDIO.md  TEST-PLAN-BROADCAST.md  TEST-PLAN-LISTEN.md  TEST-PLAN-TRANSPORT.md  validation-report-broadcast-cli.md
mdrn-cli/: Cargo.toml
mdrn-cli/src/: broadcast.rs  discover.rs  keygen.rs  lib.rs  listen.rs  main.rs  relay.rs
mdrn-cli/tests/: broadcast_tests.rs  cli_commands.rs  discover_tests.rs  listen_command.rs  network_broadcast_tests.rs  relay_tests.rs
mdrn-core/: Cargo.toml
mdrn-core/src/: lib.rs
mdrn-core/src/backchannel/: message.rs  mod.rs  payload.rs
mdrn-core/src/crypto/: encryption.rs  keys.rs  mod.rs
mdrn-core/src/identity/: keypair.rs  mod.rs  vouch.rs
mdrn-core/src/payment/: commitment.rs  method.rs  mod.rs  receipt.rs  settlement.rs
mdrn-core/src/protocol/: envelope.rs  mod.rs  types.rs
mdrn-core/src/stream/: announcement.rs  chunk.rs  codec.rs  mod.rs  relay.rs  subscription.rs
mdrn-core/src/transport/: config.rs  mod.rs  swarm.rs
mdrn-core/tests/: network_integration.rs
mdrn-relay/: Cargo.toml
mdrn-relay/src/: main.rs
mdrn-wasm/: Cargo.toml
mdrn-wasm/src/: crypto.rs  identity.rs  lib.rs  protocol.rs  stream.rs
thoughts/shared/handoffs/broadcast-cli/: current.md
thoughts/shared/handoffs/kraken-discover/: current.md
thoughts/shared/handoffs/kraken-keygen/: current.md
thoughts/shared/handoffs/kraken-libp2p-swarm/: 2026-03-22_14-25_network-broadcast-implementation.yaml  current.md
thoughts/shared/handoffs/kraken-listen-20260303/: current.md
thoughts/shared/handoffs/kraken-listen-20260322/: current.md
thoughts/shared/handoffs/kraken-vouch-20260322/: current.md
thoughts/shared/handoffs/relay-implementation/: current.md
thoughts/shared/handoffs/vouch-cli/: current.md
thoughts/shared/plans/: phase2-payment-vouches.md  phase3-browser-client.md  tdd-libp2p-broadcast-integration.md
