[package]
name = "mdrn-cli"
description = "MDRN command-line broadcaster/listener/relay tool"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "mdrn"
path = "src/main.rs"

[lib]
name = "mdrn_cli"
path = "src/lib.rs"

[dependencies]
mdrn-core.workspace = true

# CLI
clap.workspace = true

# Async
tokio.workspace = true
futures.workspace = true

# Networking (for listen --network mode)
libp2p.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Audio processing
symphonia.workspace = true
opus.workspace = true
rubato.workspace = true

# Serialization (for keypair/vouch loading)
ciborium.workspace = true
hex.workspace = true
serde.workspace = true

# Random number generation
rand.workspace = true

[dev-dependencies]
tempfile = "3"
