[package]
name = "mdrn-wasm"
version = "0.1.0"
edition = "2021"
description = "WASM bindings for MDRN protocol"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
mdrn-core = { path = "../mdrn-core", features = ["wasm"], default-features = false }
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
getrandom.workspace = true
console_error_panic_hook = "0.1"
wee_alloc = "0.4"
rand = "0.8"
sha2 = "0.10"
hmac = "0.12"
subtle = "2.5"
serde_json = "1.0"
hex = "0.4"
anyhow = "1.0"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "AudioContext",
  "AudioWorklet",
  "AudioWorkletNode",
  "MediaDevices",
  "MediaStream",
  "Navigator",
  "RtcConfiguration",
  "RtcPeerConnection",
  "RtcDataChannel",
]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]